docs: 플러그인 스킬 문서와 매니페스트 정합성 개선